--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
     <title>Maps</title>
   </head>
   <body>
+    <div id="map" style="height: 100%"></div>
+    <script src="https://maps.googleapis.com/maps/api/js?key=API_KEY=Function.prototype"></script>
     <script type="module" src="./src/index.ts"></script>
   </body>
 </html>
